# shredstream-proxy

./: .gitignore  Cargo.toml  keypair.json
examples/: Cargo.toml
proxy/: Cargo.toml
proxy/src/: deshred.rs  forwarder.rs  heartbeat.rs  main.rs  pumpfun_filter.rs  pumpfun_parser.rs  server.rs  token_authenticator.rs
sol_protos/: Cargo.toml  Makefile
sol_protos/pb/: auth.pb.go  auth_grpc.pb.go  bundle.pb.go  geyser.pb.go  geyser_grpc.pb.go  packet.pb.go  searcher.pb.go  searcher_grpc.pb.go  shared.pb.go  shredstream.pb.go  shredstream_grpc.pb.go  solana-storage.pb.go
sol_protos/protos/: auth.proto  bundle.proto  geyser.proto  packet.proto  searcher.proto  shared.proto  shredstream.proto  solana-storage.proto
sol_protos/src/: lib.rs
