[package]
name = "jito-shredstream-proxy"
version = { workspace = true }
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://docs.jito.wtf/lowlatencytxnfeed/ for details."
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
env_logger = { workspace = true }
hostname = { workspace = true }
http = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "tokio"] }
itertools = { workspace = true }
sol-protos = { path = "../sol_protos" }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
solana-client = { workspace = true }
solana-entry = { workspace = true }
solana-ledger = { workspace = true }
solana-metrics = { workspace = true }
solana-net-utils = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = "0.4"
futures-core = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
