[package]
name = "sol-protos"
version = { workspace = true }
description = "Protobufs for Solana services"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
protobuf-src = "1"
tonic-build = { workspace = true }
